Errores de seguridad corregidos

--- a/backend_server/alembic.ini
+++ b/backend_server/alembic.ini
@@ -35,7 +35,7 @@ script_location = alembic
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql+psycopg2://postgres:grupo07-superset@34.71.41.75:5432/superset
+sqlalchemy.url = 
 
 
 [post_write_hooks]
